# CUDACommunityMeetup2021

./: README.md
CUDAMemoryModel/presentation/: announcement  citation.bib  memory.tex  speech  speech_notes
CUDAMemoryModel/src/cpu/compile_time_mo/: compile_time_mo.cpp  compile_time_mo.s  (+1 more)
CUDAMemoryModel/src/gpu/broadcast/: CMakeLists.txt  main.cu
CUDAMemoryModel/src/gpu/broadcast/multi_gpu_results/: basic_multi_gpu  basic_single_gpu  plot.py  volatile_global_block_multi_gpu  volatile_global_block_single_gpu  volatile_global_block_sleep_multi_gpu  volatile_global_block_sleep_single_gpu  volatile_global_multi_gpu  volatile_global_single_gpu
CUDAMemoryModel/src/gpu/broadcast/results/: atomic_wait  atomic_wait_with_ret  atomic_wait_with_ret_inf_polling_count  atomic_wait_with_ret_polling_count_0  atomic_wait_with_ret_polling_count_1  basic  plot.py  volatile_global  volatile_global_block  volatile_global_block_sleep
CUDAMemoryModel/src/gpu/reduce/: CMakeLists.txt  main.cu
CUDAMemoryModel/src/gpu/scan/: CMakeLists.txt  main.cu
CUDAMemoryModel/src/gpu/scan/results/: copy_rtx3090  decoupled_fence_rtx3090  decoupled_rtx3090  mp_rtx3090  plot.py  single_kernel_rtx3090  three_kernels_rtx3090
WritingCUDAKernelsInPythonWithNumba/: README.md  colab-demo-with-output.ipynb  colab-demo.ipynb
WritingElegantHostSideCUDACodeinModernCpp/src/: 01.cu  02.cu  03.cu  04.cu  05.cu  06.cu  07.cu  08.cu  09.cu  10.cu  11.cu  12.cu  13.cu  14.cu  15.cu  Makefile  changes.txt  check_all  cuda-version  do_shift  meld_next  not_interesting.cuh  print-external-symbols  set_paths
(+50 files in other folders)
